hopefully fixes DateAggregation